@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 8b0688566d9d758b8db6ab6ff2b8e0b11c8c91b3 ChangeLog
+SHA1 747bcfa6749c411e7c2dead6135e7e7705b4cb5f ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 076b96a40ee3e10d1bee150578c53821e00014c0 MANIFEST
-SHA1 c994293629f8e3361907e4da9bf615c42e75c7b6 META.yml
-SHA1 e445a65efea59ad0f752fa68fa2bdb6eaa3aad67 Makefile.PL
+SHA1 a2d026d86bf490b2a6335e2164221d32a55485ae META.yml
+SHA1 3a4d19315f96415c284a2e5b7f44891c3253db84 Makefile.PL
 SHA1 fd7990a8a2e6a3211e92195eea930d61fb490eaa README
 SHA1 56058fc8d72a96f1cb02917fdf636c1abb94e51d bin/fullauto.pl
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -33,7 +33,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 0ff217701ccf7c3a79d09025c25cb94faf63e404 lib/Net/FullAuto.pm
+SHA1 f576acef9066c2f0e606f2e78f15f530b931acc3 lib/Net/FullAuto.pm
 SHA1 5ff6ce13b0ff87967726e71d0ef53ba0b3884ba7 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 1c547d9c70bbd223abf6d28018ca47076501063a lib/Net/FullAuto/Custom/README
 SHA1 11062399629ac5a8c01071ec2c876c79091f2482 lib/Net/FullAuto/Distro/fa_code.pm
@@ -47,7 +47,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAkzpWE4ACgkQdsVAdUjO9In+oQCfSnyQrqbRgq7Vr5PDE9Pmy4oD
-qe4AoIFAuBM4fF27mFqv0ssgfCI/8PYY
-=XtYe
+iEYEARECAAYFAkzpvj0ACgkQdsVAdUjO9In6vQCeNbm1Y2cFR9zDPGN4Ch6y3arj
+KFQAniERcmG5pNK/YgEpj7SJv5wRWb0u
+=J9iY
 -----END PGP SIGNATURE-----
