@@ -34,7 +34,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.64';
+our $VERSION='0.65';
 
 
 use 5.005;
